tests/shape/shape.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:10

The utility type `$Shape` is deprecated, use `Partial` instead. [deprecated-utility]

   1| type T = $Shape<{a: foo}>; // ERROR
               ^^^^^^^^^^^^^^^^



Found 1 error
